# bootdev-memory-management

./: README.md  main.c  meson.build
headerexample/: headerexample.c  headerexample.h  meson.build
structexample/: meson.build  structexample.c  structexample.h
unionexample/: meson.build  unionexample.h
